--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #f7f8f8;
+  background-color: #060606;
 }
 
 a {
