--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -5,6 +5,6 @@
   align-items: center;
   top: 0;
   height: 64px;
-  background-color: rgba(255, 255, 255, 0.05);
+  //background-color: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(20px);
 }
