--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,22 +1,112 @@
+
+
 .main {
   margin: 0 32px;
 }
 
 
+.anchor {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #5e6ad2;
+}
+
+.heroBlock {
+  display:flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 50vh;
+}
+.hero {
+  font-weight:400;
+  font-size: 32px;
+  line-height: 41px;
+  margin-bottom:0px;
+  justify-content: center;
+
+}
+.subHeader{
+  margin-bottom: 0px;
+}
+
+
+.gradientBackground {
+  position:absolute;
+  top: 25%;
+  left: 25%;
+  animation: 20s ease-in-out 0s infinite normal both running;
+  animation-name: pulse;
+  background: conic-gradient(from 217.29deg at 51.63% 52.16%, rgb(36, 0, 255) 0deg, rgb(0, 135, 255) 19.5deg, rgb(255, 29, 122) 102.75deg, rgb(245, 56, 27) 152.25deg, rgb(255, 83, 53) 208.88deg, rgb(105, 30, 255) 291deg);
+  filter: blur(125px);
+  -webkit-filter: blur(125px);
+  height: 50%;
+  width:50%;
+} 
+
+@keyframes pulse {
+  0% {
+    transform: rotate(2deg) translate(-2px, -2px) scale(0.5);
+    border-radius: 7px;
+  } ;
+  25% {
+    transform: rotate(0deg);
+    border-radius: 5px;
+  } ;
+  50% {
+    transform: rotate(-2deg) translate(2px, -2px) scale(1.01);
+    border-radius: 3px;
+  } ;
+  100% {
+      transform: rotate(2deg) translate(-2px, -2px) scale(0.5);
+      border-radius: 7px;
+  };
+}
+ 
+
+.workBlock {
+  display:flex;
+  position: relative;
+  flex-direction: column;
+  min-height: 50vh;
+
+}
 .list {
   position:relative;
   display:grid;
   grid-template-rows: auto auto auto;
-  row-gap: 16px;
+  row-gap: 24px;
 }
 
-.gradientBackground {
-  position:absolute;
-  top: 100px;
-  background: conic-gradient( from 230.29deg at 51.63% 52.16%, #2400ff 0deg, #0087ff 67.5deg, #ff1d7a 198.75deg, #f5381b 251.25deg, #ff5335 301.88deg, #691eff 360deg );
-  filter: blur(300px);
-  -webkit-filter: blur(300px);
-  height: 100%;
-  width: 100%;
-} 
- 
+@media only screen and (min-width: 520px) {
+
+  .anchor, .subHeader {
+    font-size:18px; 
+    line-height: 28px;
+    font-weight: 500;
+  }
+  .hero {
+    font-size:44px; 
+    line-height: 52px;
+    font-weight: 500
+  }
+  .workBlock {
+    font-size:18px; 
+    line-height: 28px;
+    font-weight: 400;
+  
+  }
+
+
+}
+
+@media only screen and (min-width: 900px) {
+  .main{
+    display:flex;
+    flex-direction: column;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
