--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,9 +1,10 @@
 .footer {
-    position: absolute;
     display:flex;
-    bottom: 0;
-    height: 64px;
+    position: absolute;
+    height: 128px;
+    text-align: center;
     justify-content: center;
     align-items: center;
     width: 100%;
+    border: 1px solid rgba(255,255,255, 0.1);
 }
