--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -11,8 +12,48 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+p,
+ul,
+li,
+span {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 140%;
+
 }
 
 * {
   box-sizing: border-box;
+}
+
+
+@media only screen and (min-width: 520px) {
+  a {
+    color: inherit;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+  }
+  
+  
+  p,
+  ul,
+  li,
+  span {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+  }
+
 }
