--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,10 +1,36 @@
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   position: sticky;
   align-items: center;
   top: 0;
+  margin-left: 32px;
+  margin-right: 32px;
   height: 64px;
   //background-color: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(100px);
+  z-index:2;
+}
+
+.logo {
+    font-weight: 600;
+}
+
+.subItem {
+    margin-left: 12px;
+    font-weight:400;
+}
+
+@media only screen and (min-width: 900px) {
+  .header{
+    margin-left: 64px;
+    margin-right: 64px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .header{
+    margin-left: 128px;
+    margin-right: 128px;
+  }
 }
