--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,7 +9,7 @@
   font-size: 17px;
   font-weight: 400;
   line-height: 160%;
-  color: #5e6ad2;
+  color: #828fff;
 }
 
 .heroBlock {
@@ -25,10 +25,12 @@
   line-height: 41px;
   margin-bottom:0px;
   justify-content: center;
-
+  color: #ffffff;
 }
 .subHeader{
+  margin-top:16px;
   margin-bottom: 0px;
+  color: #95a2b3;
 }
 
 
@@ -36,30 +38,26 @@
   position:absolute;
   top: 25%;
   left: 25%;
-  animation: 20s ease-in-out 0s infinite normal both running;
+  animation: 14s ease-in-out 0s infinite normal both running;
   animation-name: pulse;
   background: conic-gradient(from 217.29deg at 51.63% 52.16%, rgb(36, 0, 255) 0deg, rgb(0, 135, 255) 19.5deg, rgb(255, 29, 122) 102.75deg, rgb(245, 56, 27) 152.25deg, rgb(255, 83, 53) 208.88deg, rgb(105, 30, 255) 291deg);
-  filter: blur(125px);
-  -webkit-filter: blur(125px);
+  filter: blur(100px);
+  -webkit-filter: blur(100px);
   height: 50%;
   width:50%;
 } 
 
 @keyframes pulse {
   0% {
-    transform: rotate(2deg) translate(-2px, -2px) scale(0.5);
+    transform: rotate(5deg) translate(200px, -50px) scale(.8);
     border-radius: 7px;
   } ;
-  25% {
-    transform: rotate(0deg);
-    border-radius: 5px;
-  } ;
   50% {
-    transform: rotate(-2deg) translate(2px, -2px) scale(1.01);
+    transform: rotate(-5deg) translate(-50px, 50px) scale(.5);
     border-radius: 3px;
   } ;
   100% {
-      transform: rotate(2deg) translate(-2px, -2px) scale(0.5);
+      transform: rotate(5deg) translate(200px, -50px) scale(.8);
       border-radius: 7px;
   };
 }
@@ -77,6 +75,27 @@
   display:grid;
   grid-template-rows: auto auto auto;
   row-gap: 24px;
+}
+.more {
+  font-size: 17px;
+  font-weight: 500;
+  color: #828fff;
+  &:after {
+      padding-left: 4px;   
+         content: '→';
+         font-weight: 500;
+         color: #828fff;
+  }
+
+  &:hover {
+    color: #BFC6FF;
+    &:after {
+      color: #BFC6FF;
+      padding-left: 12px;
+      transition: padding 0.4s;
+      
+  }
+  }
 }
 
 @media only screen and (min-width: 520px) {
