--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,8 +5,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: #f7f8f8;
+  color: #ffffff;
   background-color: #060606;
+  overflow-x: hidden
 }
 
 a {
@@ -17,18 +18,27 @@ a {
 }
 
 h3 {
-  font-size: 17px;
+  font-size: 32px;
   font-weight: 500;
-  line-height: 150%;
+  line-height: 40px;
+}
+h6 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 
 p,
 ul,
 li,
 span {
-  font-size: 17px;
+  margin-top: 0px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 140%;
+  line-height: 24px;
+  color: #95a2b3;
 
 }
 
