--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,8 +3,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter UI","SF Pro Display",-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu, Cantarell,"Open Sans","Helvetica Neue",sans-serif;
   color: #ffffff;
   background-color: #060606;
   overflow-x: hidden
@@ -28,6 +27,8 @@ h6 {
   line-height: 28px;
   margin-top: 0px;
   margin-bottom: 16px;
+  color: #95a2b3;
+
 }
 
 p,
