smooth out animation

--- a/styles/banner.module.scss
+++ b/styles/banner.module.scss
@@ -34,7 +34,7 @@
     height: 256px;
     width: 256px;
     background: radial-gradient(98.19% 103.21% at 2.69% 5.21%, #3BE2B2 0%, #7A79F4 67.7%, #EB4BB9 100%);
-    animation: .8s cubic-bezier(0.6, 0, 0.15, 1) normal ;
+    animation: 2.4s cubic-bezier(0.6, 0, 0.15, 1) normal ;
     animation-name: fadein;
     border-radius:12px;
 }
