--- a/styles/workPage.module.scss
+++ b/styles/workPage.module.scss
@@ -1,11 +1,16 @@
 .contents {
-    display:grid;
-    grid-template-rows: auto auto auto;
+    display:flex;
+    //grid-template-rows: 50% 50%;
+    flex-direction: column;
     row-gap: 16px;
     margin: 32px;
-
+}
+.wrapper {
+    display:flex;
+    flex-direction: column;
 }
 .breadCrumbList {
+    text-align: left;
     margin: 32px;
     color: #95a2b3;
     .breadCrumb {
@@ -48,20 +53,18 @@
 
 @media only screen and (min-width: 900px) {
     .contents{
-
+     flex-direction:row;
       max-width: 800px;
       margin-left: auto;
       margin-right: auto;
-      grid-template-columns: auto auto;
-      grid-template-rows: auto auto;
       row-gap: 32px;
       column-gap: 32px;
     }
 
     .breadCrumbList{
-        max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
+        width:800px;
+        margin-left: auto;
+         margin-right: auto;
     }
 
   }
