--- a/styles/workPage.module.scss
+++ b/styles/workPage.module.scss
@@ -68,8 +68,11 @@
       max-width: 800px;
       margin-left: auto;
       margin-right: auto;
-      row-gap: 32px;
-      column-gap: 32px;
+      & div {
+        margin-bottom:32px;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
     }
 
     .breadCrumbList{
