--- a/styles/contentPage.module.scss
+++ b/styles/contentPage.module.scss
@@ -1,66 +1,83 @@
-.wrapper{
-    margin:32px;
-    min-height: calc(100vh - 160px);
+.wrapper {
+  margin: 32px;
+  min-height: calc(100vh - 160px);
 }
 
 .blur {
-   filter: blur(2px); 
+  filter: blur(2px);
 }
 
 .externalLink {
-    font-weight:400;
-    text-decoration: underline;
-    color: #828fff;
+  font-weight: 400;
+  text-decoration: underline;
+  color: #828fff;
 }
 
-.sectionalHeader{
-    color: #ffffff;
+.sectionalHeader {
+  color: #ffffff;
 }
 
 .heroImage {
-    margin-top:32px;
-    margin-bottom: 32px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .heroImageMultiple {
-   display:flex;
-   margin-top:32px;
-    margin-bottom: 32px;
-    column-gap: 32px;
+  display: flex;
+  margin-top: 32px;
+  margin-bottom: 32px;
+  column-gap: 32px;
 }
 .socialMediaList {
-    padding-left: 0px;
-    li{
+  padding-left: 0px;
+  li {
     cursor: pointer;
-    border-radius:50px;
+    border-radius: 50px;
     margin-right: 16px;
     list-style-type: none;
     color: #828fff;
     &:after {
-        padding-left: 4px;   
-           content: '→';
-           font-weight: 500;
-           color: #828fff;
+      padding-left: 4px;
+      content: "→";
+      font-weight: 500;
+      color: #828fff;
     }
-  
+
     &:hover {
-      color: #BFC6FF;
+      color: #bfc6ff;
       &:after {
-        color: #BFC6FF;
+        color: #bfc6ff;
         padding-left: 12px;
         transition: padding 0.4s;
-        
+      }
     }
+  }
+}
+
+.breadCrumbList {
+  text-align: left;
+  margin: 32px 0px;
+  color: #95a2b3;
+  .breadCrumb {
+    cursor: pointer;
+    text-decoration: underline;
+    &:hover {
+      color: #d9dee3;
     }
-    }
+  }
+  a {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 900px) {
-    .wrapper{
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-
-    }
-
+  .wrapper {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  
+  .breadCrumbList {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
