--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,12 +1,12 @@
 .footer {
-    display:flex;
-    //position: absolute;
-    margin-top: 32px;
-    height: 128px;
-    bottom:0;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border: 1px solid rgba(255,255,255, 0.1);
+  display: flex;
+  //position: absolute;
+  margin-top: 32px;
+  height: 128px;
+  bottom: 0;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
