--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,12 @@
-
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Inter UI","SF Pro Display",-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu, Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-family: "Inter UI", "SF Pro Display", -apple-system, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #ffffff;
   background-color: #060606;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 a {
@@ -28,7 +28,6 @@ h6 {
   margin-top: 0px;
   margin-bottom: 16px;
   color: #95a2b3;
-
 }
 
 p,
@@ -40,13 +39,11 @@ span {
   font-weight: 400;
   line-height: 24px;
   color: #95a2b3;
-
 }
 
 * {
   box-sizing: border-box;
 }
-
 
 @media only screen and (min-width: 520px) {
   a {
@@ -56,8 +53,7 @@ span {
     line-height: 28px;
     font-weight: 500;
   }
-  
-  
+
   p,
   ul,
   li,
@@ -66,9 +62,8 @@ span {
     line-height: 28px;
     font-weight: 400;
   }
-
 }
 
-.app-wrapper{
-  position:relative;
+.app-wrapper {
+  position: relative;
 }
