--- a/styles/workPage.module.scss
+++ b/styles/workPage.module.scss
@@ -64,7 +64,7 @@
 @media only screen and (min-width: 900px) {
   .contents {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
     row-gap: 32px;
     column-gap: 32px;
